some css change

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ body{
 .all-btn{
     background-color:#8B008B ;
     color: white;
-    padding: 12px 30px;
+    font-size: 16px;
+    padding: 14px 30px;
     border-radius: 5px;
     border: none;
 }
@@ -104,10 +105,11 @@ body{
     display: flex;
     width: 80%;
     margin-left: 9%;
+    padding: 30px;
     background-image:url(/images/shapes/shape-1.png);
     background-size:150px ;
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: left center;
 }
 .development-part h2{
     font-size: 40px;
@@ -132,6 +134,7 @@ body{
 }
 .community-photo img{
     width: 400px;
+    margin-left: 50px;
 }
 
 
