--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,12 @@ body{
     width: 80%;
     margin-left: 9%;
     padding: 30px;
-    background-image:url(/images/shapes/shape-1.png);
+    background-image: url(../images/shapes/shape-1.png);
     background-size:150px ;
     background-repeat: no-repeat;
     background-position: left center;
 }
+
 .development-part h2{
     font-size: 40px;
 }
@@ -123,7 +124,7 @@ body{
     margin-left: 9%;
     margin-top: 100px;
     margin-bottom: 50px;
-    background-image: url(/images/shapes/shape-1.png);
+    background-image: url(../images/shapes/shape-1.png);
     background-repeat: no-repeat;
     background-size:150px ;
     background-position: right bottom;
